# task-manager

./: .gitignore  main.py  pyproject.toml
app/api/crud/: groups.py
app/api/schemas/: groups.py  tasks.py  users.py
app/db/: database.py  models.py
